--- a/src/application/Economy.fxml
+++ b/src/application/Economy.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -9,30 +10,30 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1300.0" scaleShape="false" style="-fx-background-color: #F5DEB3;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" scaleShape="false" style="-fx-background-color: #F5DEB3;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField layoutX="535.0" layoutY="14.0" prefHeight="66.0" prefWidth="233.0" style="-fx-background-color: 0000000;" text="Окно экономики">
+      <TextField layoutX="534.0" prefHeight="66.0" prefWidth="233.0" style="-fx-background-color: 0000000;" text="Окно экономики">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </TextField>
-      <Pane layoutX="35.0" layoutY="191.0" prefHeight="265.0" prefWidth="500.0" style="-fx-border-color: black;">
+      <Pane layoutX="34.0" layoutY="33.0" prefHeight="161.0" prefWidth="500.0" style="-fx-border-color: black;">
          <children>
-            <TextField alignment="CENTER" layoutX="38.0" layoutY="37.0" prefHeight="25.0" prefWidth="168.0" promptText="Введите номер факультета" />
-            <TextField layoutX="280.0" layoutY="37.0" />
-            <TextField alignment="CENTER" layoutX="38.0" layoutY="113.0" prefHeight="25.0" prefWidth="168.0" promptText="Введите номер группы" />
-            <TextField layoutX="280.0" layoutY="113.0" />
-            <TextField alignment="CENTER" layoutX="38.0" layoutY="190.0" prefHeight="25.0" prefWidth="168.0" promptText="Введите номер студента" />
-            <TextField layoutX="280.0" layoutY="190.0" />
+            <TextField alignment="CENTER" layoutX="38.0" layoutY="27.0" prefHeight="25.0" prefWidth="168.0" promptText="Введите номер факультета" />
+            <TextField layoutX="280.0" layoutY="27.0" />
+            <TextField alignment="CENTER" layoutX="38.0" layoutY="58.0" prefHeight="25.0" prefWidth="168.0" promptText="Введите номер группы" />
+            <TextField layoutX="280.0" layoutY="58.0" />
+            <TextField alignment="CENTER" layoutX="38.0" layoutY="90.0" prefHeight="25.0" prefWidth="168.0" promptText="Введите номер студента" />
+            <TextField layoutX="280.0" layoutY="90.0" />
             <Label alignment="CENTER" contentDisplay="CENTER" layoutX="184.0" layoutY="2.0" prefHeight="25.0" prefWidth="133.0" text="Расходы на стипендии" textAlignment="CENTER" />
+            <Button layoutX="157.0" layoutY="122.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="187.0" style="-fx-background-color: #25213E;" text="Выполнить вычисления" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
          </children>
       </Pane>
-      <Button layoutX="307.0" layoutY="542.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="187.0" style="-fx-background-color: #25213E;" text="Выполнить вычисления" textFill="WHITE">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
-      <TableView layoutX="545.0" layoutY="150.0" prefHeight="416.0" prefWidth="718.0">
+      <TableView layoutX="568.0" layoutY="175.0" prefHeight="416.0" prefWidth="718.0">
          <columns>
             <TableColumn prefWidth="75.0" text="IdStudent" />
             <TableColumn prefWidth="75.0" text="Name" />
@@ -45,5 +46,72 @@
             <TableColumn prefWidth="78.0" text="Type" />
          </columns>
       </TableView>
+      <Pane layoutX="73.0" layoutY="616.0" prefHeight="65.0" prefWidth="461.0" style="-fx-border-color: black;">
+         <children>
+            <Button fx:id="bNew" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleNew" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
+            <Button fx:id="bEdit" layoutX="167.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleUpd" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
+            <Button fx:id="bDelete" layoutX="316.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleDel" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
+         </children>
+      </Pane>
+      <TextField fx:id="tfSurname" layoutX="296.0" layoutY="303.0" prefHeight="25.0" prefWidth="200.0" promptText="Фамилия" />
+      <TextField fx:id="tfName" layoutX="296.0" layoutY="263.0" prefHeight="25.0" prefWidth="200.0" promptText="Имя" />
+      <TextField fx:id="tfIdStudent" editable="false" layoutX="296.0" layoutY="223.0" prefHeight="25.0" prefWidth="200.0" promptText="ID" />
+      <TextField fx:id="tfMiddle_name" layoutX="296.0" layoutY="343.0" prefHeight="25.0" prefWidth="200.0" promptText="Отчество" />
+      <TextField fx:id="tfDate_of_birth" layoutX="296.0" layoutY="383.0" prefHeight="25.0" prefWidth="200.0" promptText="Дата рождения" />
+      <TextField fx:id="tfYear_of_enrollment" layoutX="296.0" layoutY="463.0" prefHeight="25.0" prefWidth="200.0" promptText="Год поступления" />
+      <Label layoutX="111.0" layoutY="223.0" text="ID студента">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="111.0" layoutY="263.0" text="Имя студента">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="111.0" layoutY="303.0" text="Фамилия студента">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="111.0" layoutY="343.0" prefHeight="25.0" prefWidth="143.0" text="Отчество студента">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="111.0" layoutY="383.0" prefHeight="25.0" prefWidth="185.0" text="Дата рождения студента">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="111.0" layoutY="423.0" prefHeight="25.0" prefWidth="185.0" text="Пол студента">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="111.0" layoutY="463.0" prefHeight="25.0" prefWidth="185.0" text="Год поступления">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="111.0" layoutY="503.0" prefHeight="25.0" prefWidth="185.0" text="Статус">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="111.0" layoutY="543.0" prefHeight="25.0" prefWidth="185.0" text="Стипендия">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="111.0" layoutY="583.0" prefHeight="25.0" prefWidth="185.0" text="Группа">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <ComboBox fx:id="cbMRID" layoutX="296.0" layoutY="544.0" prefHeight="25.0" prefWidth="200.0" />
+      <ComboBox fx:id="cbSID" layoutX="296.0" layoutY="583.0" prefHeight="25.0" prefWidth="200.0" />
+      <ComboBox fx:id="cbSex" layoutX="296.0" layoutY="423.0" prefHeight="25.0" prefWidth="200.0" />
+      <ComboBox fx:id="cbStatus" layoutX="296.0" layoutY="503.0" prefHeight="25.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
