--- a/src/application/Invite.fxml
+++ b/src/application/Invite.fxml
@@ -18,7 +18,7 @@
             <Button layoutX="33.0" layoutY="94.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
          </children>
       </Pane>
-      <Pane layoutX="25.0" layoutY="186.0" prefHeight="144.0" prefWidth="352.0" style="-fx-border-color: black;">
+      <Pane layoutX="24.0" layoutY="53.0" prefHeight="144.0" prefWidth="352.0" style="-fx-border-color: black;">
          <children>
             <Label alignment="CENTER" layoutX="116.0" layoutY="14.0" prefHeight="36.0" prefWidth="121.0" text="Фильтры" textAlignment="CENTER">
                <font>
@@ -36,14 +36,44 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <TableView layoutX="384.0" layoutY="186.0" prefHeight="357.0" prefWidth="671.0">
+      <TableView layoutX="465.0" layoutY="189.0" prefHeight="357.0" prefWidth="573.0">
          <columns>
             <TableColumn prefWidth="100.0" text="idInvite" />
             <TableColumn prefWidth="77.0" text="idStudent" />
             <TableColumn prefWidth="105.0" text="idOrganization" />
-            <TableColumn prefWidth="280.0" text="Message" />
+            <TableColumn prefWidth="182.0" text="Message" />
             <TableColumn prefWidth="106.0" text="Date" />
          </columns>
       </TableView>
+      <Label layoutX="24.0" layoutY="326.0" text="ID приглашения">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="24.0" layoutY="487.0" text="Дата отправки">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="24.0" layoutY="364.0" text="ID студента">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="24.0" layoutY="405.0" text="ID организации">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="24.0" layoutY="443.0" text="Сообщение приглашения">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField layoutX="302.0" layoutY="487.0" prefHeight="25.0" prefWidth="121.0" />
+      <TextField layoutX="302.0" layoutY="443.0" prefHeight="25.0" prefWidth="121.0" />
+      <TextField layoutX="302.0" layoutY="405.0" prefHeight="25.0" prefWidth="121.0" />
+      <TextField layoutX="302.0" layoutY="364.0" prefHeight="25.0" prefWidth="121.0" />
+      <TextField layoutX="302.0" layoutY="326.0" prefHeight="25.0" prefWidth="121.0" />
    </children>
 </AnchorPane>
