--- a/src/application/OrgStudent.fxml
+++ b/src/application/OrgStudent.fxml
@@ -4,14 +4,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" scaleShape="false" style="-fx-background-color: #F5DEB3;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane layoutX="586.0" layoutY="169.0" prefHeight="144.0" prefWidth="200.0" style="-fx-border-color: black;">
+      <Pane layoutX="87.0" layoutY="410.0" prefHeight="144.0" prefWidth="200.0" style="-fx-border-color: black;">
          <children>
             <Button layoutX="33.0" layoutY="14.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
             <Button layoutX="33.0" layoutY="54.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
@@ -23,11 +23,23 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <TableView layoutX="273.0" layoutY="169.0" prefHeight="416.0" prefWidth="287.0">
+      <TableView layoutX="389.0" layoutY="170.0" prefHeight="416.0" prefWidth="287.0">
          <columns>
             <TableColumn prefWidth="159.0" text="Organization_has_Student" />
             <TableColumn prefWidth="126.0" text="Student_idStudent" />
          </columns>
       </TableView>
+      <Label layoutX="68.0" layoutY="300.0" text="ID факультета">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="68.0" layoutY="338.0" text="Название факультета">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField layoutX="241.0" layoutY="338.0" prefHeight="25.0" prefWidth="65.0" />
+      <TextField layoutX="241.0" layoutY="300.0" prefHeight="25.0" prefWidth="65.0" />
    </children>
 </AnchorPane>
