--- a/src/application/client.fxml
+++ b/src/application/client.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -21,7 +22,7 @@
                   <Font name="System Bold" size="23.0" />
                </font>
             </Label>
-            <TableView layoutX="250.0" layoutY="120.0" prefHeight="400.0" prefWidth="700.0">
+            <TableView layoutX="486.0" layoutY="118.0" prefHeight="400.0" prefWidth="700.0">
               <columns>
                 <TableColumn prefWidth="75.0" text="IdClient" />
                 <TableColumn prefWidth="75.0" text="Name" />
@@ -31,13 +32,49 @@
                   <TableColumn prefWidth="211.0" text="Info" />
               </columns>
             </TableView>
-            <Pane layoutX="986.0" layoutY="120.0" prefHeight="144.0" prefWidth="200.0" style="-fx-border-color: black;">
+            <Pane layoutX="14.0" layoutY="453.0" prefHeight="65.0" prefWidth="461.0" style="-fx-border-color: black;">
                <children>
-                  <Button layoutX="33.0" layoutY="14.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
-                  <Button layoutX="33.0" layoutY="54.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
-                  <Button layoutX="33.0" layoutY="94.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
+                  <Button fx:id="bNew" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleNew" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
+                  <Button fx:id="bEdit" layoutX="167.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleUpd" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
+                  <Button fx:id="bDelete" layoutX="316.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleDel" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
                </children>
             </Pane>
+            <Label layoutX="45.0" layoutY="162.0" text="ID пользователя">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label layoutX="45.0" layoutY="323.0" text="Уровень доступа">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label layoutX="45.0" layoutY="200.0" text="Имя пользователя">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label layoutX="45.0" layoutY="241.0" text="Фамилия пользователя">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label layoutX="45.0" layoutY="279.0" text="Дата авторизации">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label layoutX="45.0" layoutY="364.0" prefHeight="25.0" prefWidth="258.0" text="Доп. информация о пользователе">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <TextField layoutX="322.0" layoutY="364.0" prefHeight="25.0" prefWidth="121.0" />
+            <TextField layoutX="323.0" layoutY="323.0" prefHeight="25.0" prefWidth="121.0" />
+            <TextField layoutX="323.0" layoutY="279.0" prefHeight="25.0" prefWidth="121.0" />
+            <TextField layoutX="323.0" layoutY="241.0" prefHeight="25.0" prefWidth="121.0" />
+            <TextField layoutX="323.0" layoutY="200.0" prefHeight="25.0" prefWidth="121.0" />
+            <TextField layoutX="323.0" layoutY="162.0" prefHeight="25.0" prefWidth="121.0" />
          </children>
       </Pane>
    </children>
