--- a/src/application/kalculator.fxml
+++ b/src/application/kalculator.fxml
@@ -15,7 +15,7 @@
                <children>
                   <TextField layoutX="90.0" layoutY="25.0" prefHeight="45.0" prefWidth="178.0" promptText="Введите кол-во студентов" />
                   <TextField layoutX="325.0" layoutY="25.0" prefHeight="45.0" prefWidth="140.0" />
-                  <Label layoutX="93.0" layoutY="4.0" prefHeight="21.0" prefWidth="385.0" text="Вычисление расходов на стипендии для N хорошистов">
+                  <Label layoutX="23.0" layoutY="4.0" prefHeight="21.0" prefWidth="526.0" text="Вычисление расходов на стипендии для N студентов с научной стипендией">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -26,7 +26,7 @@
                <children>
                   <TextField layoutX="90.0" layoutY="25.0" prefHeight="45.0" prefWidth="178.0" promptText="Введите кол-во студентов" />
                   <TextField layoutX="325.0" layoutY="25.0" prefHeight="45.0" prefWidth="140.0" />
-                  <Label layoutX="87.0" layoutY="4.0" prefHeight="21.0" prefWidth="397.0" text="Вычисление расходов на стипендии для N отличников">
+                  <Label layoutX="38.0" layoutY="4.0" prefHeight="21.0" prefWidth="496.0" text="Вычисление расходов на стипендии для N студентов с соц. стипендией">
                      <font>
                         <Font size="15.0" />
                      </font>
